# OVL-q-test-comparison

./: README.md  config.py  experiment.py  gaussian_mixture.py  graph.py
graphs/: Mixture.eps  N(0,1).eps  N(0,1.1^2).eps  N(0.2,1).eps  Trapezoid.eps  Triangular.eps  Uniform.eps
output/: Mixture.csv  N(0,1).csv  N(0,1.1^2).csv  N(0.2,1).csv  Trapezoid.csv  Triangular.csv  Uniform.csv
p_values/: Cargo.toml
p_values/src/: main.rs  number_theoretic_transform.rs  p_values.rs  p_values_modulo.rs
